# amazon-product-scraper-notifier

./: .env.example  .gitignore  AGENTS.md  AI-doc.md  ANALYSIS.md  CLAUDE.md  CONTEXT.md  Caddyfile  Design-doc.md  Dockerfile.docs  README.md  config.yaml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
.claude/agents/: council-reporter.md  devil-advocate.md  discrepancy-detector.md  testing-reviewer.md  workflow-reviewer.md
.claude/skills/: review-council.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_add_product_metadata.py  002_add_price_check_source.py  003_add_scheduled_prices.py  004_drop_notification_lock.py
backend/app/: auth.py  cache.py  config.py  database.py  logbus.py  main.py  models.py  runtime_config.py
backend/app/api/: routes.py
backend/app/comparison/: detector.py
backend/app/notifications/: base.py  console.py  errors.py  factory.py  multi.py  slack.py
backend/app/scheduler/: queue.py  runner.py
backend/app/scraper/: amazon.py  base.py  errors.py  search.py
backend/app/storage/: repository.py
backend/tests/: conftest.py  test_api.py  test_api_auth.py  test_comparison.py  test_notifications.py  test_scraper.py  test_storage.py
docs/: index.html  index.md  kickstart.md  scripts.md
docs/adr/: 0001-amazon-only-comparison-baseline.md
docs/backend/: api.md  (+6 more)
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
scripts/: demo_drop.py  schedule_price.py  simulate_price_walk.py
(+19 files in other folders)
